<resources>
    <string name="app_name">Apteka</string>
    <string name="search_hint">Поиск лекарств</string>
    <string name="refresh">Повторить</string>
    <string name="error">Oops! Технические неполадки ¯\\_(ツ)_/¯</string>
    <string name="empty">Результаты не найдены ¯\\_(ツ)_/¯</string>
    <string name="buy">Купить</string>
    <string name="not_available">Нет в наличии</string>
    <string name="search">Поиск</string>
    <string name="filter">Фильтр</string>
    <string name="sort">Сортировать</string>
    <string name="asc">По возрастанию цены</string>
    <string name="desc">По убыванию цены</string>
    <string name="price">Цена</string>
    <string name="from">От</string>
    <string name="to">До</string>
    <string name="available">Показывать в наличии</string>
    <string name="apply_filter">Применить фильтр</string>
    <string name="cart">Корзина</string>
    <string name="empty_cart">В корзине пусто ¯\\_(ツ)_/¯</string>
    <string name="profile">Профиль</string>
    <string name="authTextHint">Ваш e-mail будет сохранен для авторизации и использован для создания заказа.\n\nНа указзанный адрес будет выслан код для подтверждения.</string>
    <string name="continue_">продолжить</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Имя</string>
    <string name="auth">Авторизация</string>
    <string name="accept">Подтверждение</string>
    <string name="code">Код</string>
    <string name="codeTextHint">На указанный e-mail было отправлено сообщение с кодом подтверждения.</string>
    <string name="enter">войти</string>
    <string name="timer">Получить повторно код можно через 00:%1$s</string>
    <string name="retry">Получить код повторно</string>
    <string name="order">Оформить заказ</string>
    <string name="fieldError">Недопустимое значение</string>
    <string name="errorEmail">Некорректный e-mail</string>
    <string name="errorFormatCode">Неверный формат</string>
    <string name="wrongCode">Неверный код</string>
    <string name="errorSnackBar">Oops! Технические неполадки</string>
    <string name="total">Итого:</string>
    <string name="warningSnackBarCity">Необходимо указать аптеку в настройках профиля</string>
    <string name="catalog">Каталог</string>
    <string name="orders">Заказы</string>
    <string name="needAuth">Для продолжения необходимо авторизоваться</string>
    <string name="imgDesc">image</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="Pharmacy">Аптека</string>
    <string name="bd">Дата рождения</string>
    <string name="balance">В наличии</string>
    <string name="orderTotal">Итого:  %1$s</string>
    <string name="balanceError">Данного количества товара нет на складе</string>
    <string name="loginError">Невозможно выполнить вход</string>
    <string name="errorCountTrying">Превышен лимит попыток входа</string>
</resources>
