<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="ru.app.pharmacy.viewmodels.MedicineModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_filter"
        android:orientation="vertical"
        android:padding="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/filter"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_image_btn_dark"
                android:contentDescription="@string/imgDesc"
                android:onClick="@{v->model.closeFilter()}"
                android:padding="8dp"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="@color/colorPrimaryDark" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sort"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{model.filter.sortIndex == 0}"
                android:onClick="@{v->model.setSortIndex(0)}"
                android:text="@string/asc"
                android:textColor="@color/colorPrimary" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{model.filter.sortIndex == 1}"
                android:onClick="@{v->model.setSortIndex(1)}"
                android:text="@string/desc"
                android:textColor="@color/colorPrimary" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorGrayLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:clickable="false"
                    android:enabled="false"
                    android:hint="@string/from"
                    android:inputType="numberDecimal"
                    android:text="@{model.filter.priceFromString()}"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:clickable="false"
                    android:enabled="false"
                    android:hint="@string/to"
                    android:inputType="numberDecimal"
                    android:text="@{model.filter.priceToString()}"
                    android:textColor="@color/colorPrimary" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
            android:id="@+id/range_price_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:bar_color="@color/colorGrayLight"
            app:bar_highlight_color="@color/colorAccent"
            app:data_type="_integer"
            app:left_thumb_color="@color/colorAccent"
            app:left_thumb_color_pressed="@color/colorAccent"
            app:max_value="20000"
            app:min_value="0"
            app:right_thumb_color="@color/colorAccent"
            app:right_thumb_color_pressed="@color/colorAccent"
            app:steps="100" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorGrayLight" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={model.filter.available}"
            android:text="@string/available"
            android:textColor="@color/colorPrimary" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/bg_round_color"
            android:fontFamily="sans-serif"
            android:onClick="@{v->model.applyFilter()}"
            android:stateListAnimator="@null"
            android:text="@string/apply_filter"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorAccent" />

    </LinearLayout>
</layout>
